--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@babel/eslint-parser": "^7.25.8",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@fullhuman/postcss-purgecss": "^6.0.0",
+    "depcheck": "^1.4.7",
     "eslint": "^8.57.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "prettier": "3.3.2"
